# play-rs

./: .gitignore  Cargo.toml  README.md  build.rs
fixtures/: gb18030.txt  gbkuni.txt  gbkuni30.txt  gbkuniascii.txt  unigbk.txt  utf8.txt
src/: 17_yaml.yml  cli.rs  code_util.rs  dir_watcher_stream.rs  gb18030.rs  main.rs  real_world.rs  table.rs
src/tests/: mod.rs  test_char.rs  test_file.rs  test_hex.rs  test_iter.rs  test_ownership.rs  test_variable.rs  test_vec.rs  tutil.rs
